# room-rider

./: .gitignore  Cargo.toml  Makefile  camera_calibration.ipynb  camera_calibration_pickle.p  docker-compose.yaml  main.rs
_src/: drive_main.rs  led_main.rs  rppal_main.rs
camera/: Cargo.toml
control_grpc/: Cargo.toml  build.rs
control_grpc/control/: Cargo.toml
control_grpc/proto/: control.proto
control_grpc/src/: camera.rs  client.rs  main.rs  server.rs  trace_server.rs
dash/: Dockerfile  envoy.yaml  genstubs.ts  package-lock.json  package.json  tsconfig.json
dash/.storybook/: main.js
dash/src/: 1-Button.stories.tsx
joi/: Cargo.toml
joi/src/: main.rs
proto/: things.proto
scripts/: gen-proto  image_stream.py  requirements.txt  tag_stream.py  things_pb2.py  things_pb2_grpc.py
testserver/: Cargo.toml
testserver/src/: main.rs
wheels/: Cargo.toml
wheels/src/: lib.rs
