[package]
name = "control-grpc"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wheels = { path = "../wheels" }
tonic = "0.2"
prost = "0.6"
tokio = { version = "1.8", features = ["macros"] }
tonic-build = "0.2"
pasts = "0.4"
stick = "0.9"
gilrs = "0.7.4"
apriltag = {git = "https://github.com/jerry73204/apriltag-rust.git", features = ["image"]}
failure = "0.1"
image = "0.23" 

[build-dependencies]
tonic-build = "0.2"


[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "camera"
path = "src/camera.rs"